--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,15 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.12'
     compile 'com.google.guava:guava:18.0'
     compile 'com.google.code.gson:gson:2.3.1'
+    //compile 'org.ow2.asm:asm:5.0.3'
+    compile 'org.ow2.asm:asm-debug-all:5.0.3'
 
     testCompile "junit:junit:4.12"
 }
 
+compileJava {
+    options.deprecation = true
+    options.compilerArgs += ["-Werror", "-Xlint:unchecked"]
+    sourceCompatibility = "1.6"
+    targetCompatibility = "1.6"
+}
